
- =my-org-created-property-name= variable for specifying the
  name of the property used to track when Org items were
  created

- next actions, projects, and waiting-fors are now identified
  via the =my-org-gtd-type-property-name= property rather than
  by tags

- prompt for org next action energies

- =undo-tree= is now an explicit dependency in Cask

*** Installer

- installer command =show_distro= which shows the currently
  detected Linux distribution

- =pip= manager now supports
  - =install=
  - =installed=
  - =update=
  - =version current=
  - =version latest=

- =snapd= AUR package install recipe

** Changed

- agenda view =D= now displays completed and cancelled
  actions, waiting fors, someday items, and maybe items

- =evil-undo-system= now uses ='undo-tree=

- installer distribution now always defaults to =arch= if a
  distribution cannot be detected

- next actions and waiting fors created with
  =my-org-gtd-insert-next-action-heading= and
  =my-org-gtd-insert-waiting-for-heading= now include a
  creation date

- org gtd files now under =current= directory

- org mobile inbox is now =mobile-inbox.org= (under =current=
  directory)

- =my-org-gtd-insert-waiting-for-heading= will now only
  schedule if date is in future

- =xref--xref-buffer-mode= now defaults to =motion= state

** Fixed

- installer not detecting distribution if the =uname -a=
  format didn't contain enough information (this now uses
  release files (see =man os-release=))

*** Emacs

- =my-projectile-grep= no longer fails when grepping in a
  non-project directory (searches in current directory
  instead)

- =RET= in =xref--xref-buffer-mode= now jumps to the
  definition

- various fixes needed to get configuration working with Emacs
  27

* 0.11.0 - 2020-05-06

** Added

- =grepcount= command for searching files and organising
  result on number of matches

- =greptxt= and =greptext= aliases for searching =.txt= files
  and organising results on number of matches
